--- a/LocusEffects/LocusEffects.csproj
+++ b/LocusEffects/LocusEffects.csproj
@@ -1,240 +1,190 @@
-<VisualStudioProject>
-    <CSHARP
-        ProjectType = "Local"
-        ProductVersion = "7.10.3077"
-        SchemaVersion = "2.0"
-        ProjectGuid = "{B31C2C9E-C8E5-4C83-B2FF-A996AD9DB80C}"
-    >
-        <Build>
-            <Settings
-                ApplicationIcon = ""
-                AssemblyKeyContainerName = ""
-                AssemblyName = "BigMansStuff.LocusEffects"
-                AssemblyOriginatorKeyFile = ""
-                DefaultClientScript = "JScript"
-                DefaultHTMLPageLayout = "Grid"
-                DefaultTargetSchema = "IE50"
-                DelaySign = "false"
-                OutputType = "Library"
-                PreBuildEvent = ""
-                PostBuildEvent = ""
-                RootNamespace = "BigMansStuff.LocusEffects"
-                RunPostBuildEvent = "OnBuildSuccess"
-                StartupObject = ""
-            >
-                <Config
-                    Name = "Debug"
-                    AllowUnsafeBlocks = "true"
-                    BaseAddress = "285212672"
-                    CheckForOverflowUnderflow = "false"
-                    ConfigurationOverrideFile = ""
-                    DefineConstants = "DEBUG;TRACE"
-                    DocumentationFile = ""
-                    DebugSymbols = "true"
-                    FileAlignment = "4096"
-                    IncrementalBuild = "false"
-                    NoStdLib = "false"
-                    NoWarn = ""
-                    Optimize = "false"
-                    OutputPath = "bin\Debug\"
-                    RegisterForComInterop = "false"
-                    RemoveIntegerChecks = "false"
-                    TreatWarningsAsErrors = "false"
-                    WarningLevel = "4"
-                />
-                <Config
-                    Name = "Release"
-                    AllowUnsafeBlocks = "true"
-                    BaseAddress = "285212672"
-                    CheckForOverflowUnderflow = "false"
-                    ConfigurationOverrideFile = ""
-                    DefineConstants = "TRACE"
-                    DocumentationFile = "xmldoc\LocusEffects.xmldoc"
-                    DebugSymbols = "false"
-                    FileAlignment = "4096"
-                    IncrementalBuild = "false"
-                    NoStdLib = "false"
-                    NoWarn = "1591"
-                    Optimize = "true"
-                    OutputPath = "bin\Release\"
-                    RegisterForComInterop = "false"
-                    RemoveIntegerChecks = "false"
-                    TreatWarningsAsErrors = "false"
-                    WarningLevel = "4"
-                />
-            </Settings>
-            <References>
-                <Reference
-                    Name = "System"
-                    AssemblyName = "System"
-                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.dll"
-                />
-                <Reference
-                    Name = "System.Data"
-                    AssemblyName = "System.Data"
-                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Data.dll"
-                />
-                <Reference
-                    Name = "System.XML"
-                    AssemblyName = "System.Xml"
-                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
-                />
-                <Reference
-                    Name = "System.Drawing"
-                    AssemblyName = "System.Drawing"
-                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Drawing.dll"
-                />
-                <Reference
-                    Name = "System.Windows.Forms"
-                    AssemblyName = "System.Windows.Forms"
-                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Windows.Forms.dll"
-                />
-            </References>
-        </Build>
-        <Files>
-            <Include>
-                <File
-                    RelPath = "LocusEffectsProvider.bmp"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "LocusEffectsProvider.cs"
-                    SubType = "Component"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "LocusEffectsProvider.resx"
-                    DependentUpon = "LocusEffectsProvider.cs"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "Assembly\AssemblyInfo.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Assembly\LocusEffects.snk"
-                    BuildAction = "None"
-                />
-                <File
-                    RelPath = "Assembly\ReleaseNotes.txt"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "Effects\AnimatedImage\AnimatedImageFrame.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Effects\AnimatedImage\AnimatedImageLocusEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Effects\AnimatedImage\AnimatedImageLocusEffect_Images.resx"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "Effects\AnimatedImage\DefaultAnimatedImage.gif"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "Effects\Arrow\ArrowLocusEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Effects\Arrow\ArrowLocusEffect_Images.resx"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "Effects\Arrow\DefaultArrow.png"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "Effects\Beacon\BeaconLocusEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Effects\Bitmap\BitmapLocusEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Effects\Bitmap\BitmapLocusEffect_Images.resx"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "Effects\Bitmap\DefaultBitmap.png"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "Effects\Text\TextLocusEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\BaseBitmapEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\BaseLocusEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\BaseStandardEffect.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\EffectRuntimeData.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\EffectWindow.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\EffectWindow.resx"
-                    DependentUpon = "EffectWindow.cs"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "Framework\Utils\BitmapUtilities.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\Utils\CommonData.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\Utils\ImageBlender.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\Utils\LayeredWindow.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Framework\Utils\NativeMethods.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "NDoc\LocusEffects.chm"
-                    BuildAction = "Content"
-                />
-            </Include>
-        </Files>
-    </CSHARP>
-</VisualStudioProject>
-
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+  <PropertyGroup>
+    <ProjectType>Local</ProjectType>
+    <ProductVersion>8.0.50727</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{B31C2C9E-C8E5-4C83-B2FF-A996AD9DB80C}</ProjectGuid>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ApplicationIcon>
+    </ApplicationIcon>
+    <AssemblyKeyContainerName>
+    </AssemblyKeyContainerName>
+    <AssemblyName>BigMansStuff.LocusEffects</AssemblyName>
+    <AssemblyOriginatorKeyFile>Assembly\LocusEffects.snk</AssemblyOriginatorKeyFile>
+    <DefaultClientScript>JScript</DefaultClientScript>
+    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
+    <DefaultTargetSchema>IE50</DefaultTargetSchema>
+    <DelaySign>false</DelaySign>
+    <OutputType>Library</OutputType>
+    <RootNamespace>BigMansStuff.LocusEffects</RootNamespace>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <StartupObject>
+    </StartupObject>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <SignAssembly>true</SignAssembly>
+    <OldToolsVersion>2.0</OldToolsVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <OutputPath>bin\Debug\</OutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <BaseAddress>285212672</BaseAddress>
+    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
+    <ConfigurationOverrideFile>
+    </ConfigurationOverrideFile>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DocumentationFile>
+    </DocumentationFile>
+    <DebugSymbols>true</DebugSymbols>
+    <FileAlignment>4096</FileAlignment>
+    <NoStdLib>false</NoStdLib>
+    <NoWarn>
+    </NoWarn>
+    <Optimize>false</Optimize>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <RemoveIntegerChecks>false</RemoveIntegerChecks>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningLevel>4</WarningLevel>
+    <DebugType>full</DebugType>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <OutputPath>bin\Release\</OutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <BaseAddress>285212672</BaseAddress>
+    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
+    <ConfigurationOverrideFile>
+    </ConfigurationOverrideFile>
+    <DefineConstants>TRACE</DefineConstants>
+    <DocumentationFile>xmldoc\LocusEffects.xmldoc</DocumentationFile>
+    <DebugSymbols>false</DebugSymbols>
+    <FileAlignment>4096</FileAlignment>
+    <NoStdLib>false</NoStdLib>
+    <NoWarn>1591</NoWarn>
+    <Optimize>true</Optimize>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <RemoveIntegerChecks>false</RemoveIntegerChecks>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningLevel>4</WarningLevel>
+    <DebugType>none</DebugType>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug + OpenGL|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <BaseAddress>285212672</BaseAddress>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System">
+      <Name>System</Name>
+    </Reference>
+    <Reference Include="System.Data">
+      <Name>System.Data</Name>
+    </Reference>
+    <Reference Include="System.Drawing">
+      <Name>System.Drawing</Name>
+    </Reference>
+    <Reference Include="System.Windows.Forms">
+      <Name>System.Windows.Forms</Name>
+    </Reference>
+    <Reference Include="System.Xml">
+      <Name>System.XML</Name>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Effects\AnimatedImage\AnimatedImageLocusEffect_Images.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Effects\Arrow\ArrowLocusEffect_Images.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Effects\Bitmap\BitmapLocusEffect_Images.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Framework\EffectWindow.resx">
+      <DependentUpon>EffectWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LocusEffectsProvider.bmp" />
+    <EmbeddedResource Include="LocusEffectsProvider.resx">
+      <DependentUpon>LocusEffectsProvider.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Assembly\AssemblyInfo.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Effects\AnimatedImage\AnimatedImageFrame.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Effects\AnimatedImage\AnimatedImageLocusEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Effects\Arrow\ArrowLocusEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Effects\Beacon\BeaconLocusEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Effects\Bitmap\BitmapLocusEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Effects\Text\TextLocusEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\BaseBitmapEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\BaseLocusEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\BaseStandardEffect.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\EffectRuntimeData.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\EffectWindow.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\Utils\BitmapUtilities.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\Utils\CommonData.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\Utils\ImageBlender.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\Utils\LayeredWindow.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Framework\Utils\NativeMethods.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="LocusEffectsProvider.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <None Include="Assembly\LocusEffects.snk" />
+    <None Include="AutoDoc\LocusEffects.shfb" />
+    <Content Include="Assembly\ReleaseNotes.txt" />
+    <Content Include="AutoDoc\readme.txt" />
+    <Content Include="Effects\AnimatedImage\DefaultAnimatedImage.gif" />
+    <Content Include="Effects\Arrow\DefaultArrow.png" />
+    <Content Include="Effects\Bitmap\DefaultBitmap.png" />
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
+</Project>
